--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 
 .hat
     {
-        width: 39%;
+        width: 40%;
         font-family: 'Roboto', sans-serif;
         margin-left: 31.2%;
         color: rgba(0, 0, 0, 0.5);
@@ -63,6 +63,12 @@
     {
         display: inline-block;
         width: 3vw;
+        transition: 0.7s;
+    }
+
+.head-logo:hover
+    {
+        filter: invert(1) brightness(2.3);
     }
 
 /*-------Center-titles*/
@@ -104,6 +110,7 @@ header h2
         color: #000000;
         vertical-align: middle;
         padding: 1.5vw 1vw;
+        transition: 0.3s;
     }
 
 .headerbutton p:hover
@@ -111,7 +118,6 @@ header h2
         cursor: pointer;
         background: #000000;
         color: white;
-        transition: 0.3s;
         border-color: rgba(0, 0, 0, 0.5);
     }
 
@@ -180,9 +186,424 @@ header h2
 
 /*--------chronicle-------*/
 
-.chronicle
+.chronique
     {
-        background: #1d1d1d;
         color: white;
+        background-color: #1d1d1d;
+    }
+
+.chronique h1
+    {
+        display: block;
+        width: 8%;
+        font-size: 2vw;
+    }
+
+.chr-circles
+    {
+        margin-top: 8.2vw;
+        text-align: center;
+        position: absolute;
+        width: 100%;
+    }
+
+    .chr-circles div
+        {
+            background: #1d1d1d;
+            border-width: 0.3vw;
+        }
+
+
+    .mid-circ-small
+        {
+            display: inline-block;
+            width: 1.3vw;
+            height: 1.3vw;
+            border-style: solid;
+            border-radius: 50%;
+        }
+
+    .mid-circ-big
+        {
+            display: inline-block;
+            width: 2.8vw;
+            height: 2.8vw;
+            border-style: solid;
+            border-radius: 50%;
+            margin: 8.8vw 0;
+        }
+
+
+
+.chronique h2
+    {
+        font-size: 1vw;
+        display: block;
+    }
+
+.chr-left
+    {
+        float: left;
+        width: 49.9%;
+        background: #1d1d1d;
+        height: 65vw;
+    }
+
+
+.chr-left div
+    {
+        margin-top: 15.5%;
+        height: 5%;
+        margin-right: 7%;
+    }
+
+.chr-left h1
+    {
+        float: right;
+        width: 9.6%;
+    }
+
+.chr-left h2
+    {
+        display: inline-block;
+        text-align: right;
+        margin-left: 20%;
+    }
+
+.chr-left h2, .chr-right h2
+    {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 100;
         font-size: 1vw;
     }
+
+.chr-left h1, .chr-right h1
+    {
+        font-family: 'HelveticaNeueCyr';
+        font-weight: normal;
+        margin-bottom: 2%;
+    }
+
+.chr-right
+    {
+        float: right;
+        width: 49.9%;
+        margin-left: 1px;
+        background: #1d1d1d;
+        height: 65vw;
+    }
+
+.chr-right div
+    {
+        margin-left: 7%;
+    }
+
+/* ---------------div_BUILDINGS--------------- */
+
+.buildings
+    {
+        float: left;
+        position: relative;
+        width: 100%;
+        transition: 0.5s;
+    }
+
+    .bldngs-white, .bldngs-black
+        {
+            width: 100%;
+            vertical-align: top;
+            position: absolute;
+            margin-top: -10%;
+        }
+
+    .bldngs-black
+        {
+            margin-top: -10.1%;
+        }
+/* ----------OUR BEAUTIFUUUL TEAM!!!!!-------- */
+
+
+.team
+    {
+        margin-top: 76vw;
+    }
+
+    .team-header
+        {
+            text-align: center;
+        }
+
+    .team-header h1
+        {
+            font-size: 2vw;
+            font-family: 'HelveticaNeueCyr';
+            font-weight: 300;
+        }
+
+    .team-header h2
+        {
+            font-size: 1vw;
+            font-family: 'Merriweather', serif;
+            font-weight: normal;
+            color: rgba(0, 0, 0, 0.5);
+        }
+
+    .contacts
+        {
+            text-align: center;
+            margin-top: 9vw;
+            margin-bottom: 10vw;
+        }
+
+    .contacts div
+        {
+            display: inline-block;
+            height: 20vw;
+            width: 15vw;
+            vertical-align: bottom;
+        }
+
+    .contacts img
+        {
+            width: 9vw;
+            filter: grayscale(100) brightness(1.2);
+            border-radius: 50%;
+        }
+
+    .contacts-img:hover .contacts-div
+        {
+            background: #181818;
+        }
+
+    .contacts-midguy
+        {
+        margin: 0 8%;
+        }
+
+    .contacts-sideguys
+        {
+            margin-top: 5vw;
+        }
+
+    .contact-name
+        {
+            font-size: 1.4vw;
+            font-family: 'HelveticaNeueCyr';
+            font-weight: 400;
+            margin-top: 5%;
+            color: rgba(0, 0, 0, 0.7);
+        }
+
+    .contact-job-position
+        {
+            font-size: 0.8vw;
+            font-family: 'HelveticaNeueCyr';
+            font-weight: 300;
+            color: rgba(0, 0, 0, 0.5);
+        }
+
+    .contact-ext-links
+        {
+            margin-top: 1vw;
+        }
+
+    .contact-ext-links img
+        {
+            width: 1.2vw;
+            filter: brightness(0.9);
+            border-radius: 0;
+            transition: 0.2s;
+        }
+
+    .contact-ext-links img:hover
+        {
+            filter: brightness(0.3);
+            cursor: pointer;
+        }
+
+    .trigon
+        {
+            width: 100%;
+            position: absolute;
+        }
+
+.weprovide
+    {
+        background: #181818;
+        text-align: center;
+        padding-top: 11vw;
+        color: white;
+    }
+
+    .weprovide-services div
+        {
+            display: inline-block;
+        }
+
+    .weprovide-services
+        {
+            margin-top: 12%;
+        }
+
+    .weprovide-services img
+        {
+            width: 10vw;
+            transition: 0.3s;
+        }
+
+    .weprovide-services img:hover
+        {
+            padding: 3%;
+            filter: opacity(0.7);
+            mix-blend-mode: screen;
+            cursor: pointer;
+        }
+
+    .weprovide-header h1
+        {
+            font-family: 'HelveticaNeueCyr';
+            font-weight: 300;
+            font-size: 2vw;
+        }
+
+    .weprovide-header h2
+        {
+            font-size: 1vw;
+            font-family: 'Merriweather', serif;
+            font-weight: normal;
+            color: rgba(255, 255, 255, 0.4);
+        }
+
+
+    .weprovide-services h1
+        {
+            font-family: 'HelveticaNeueCyr';
+            font-weight: 300;
+            font-size: 1.4vw;
+            margin-top: 2.5vw;
+        }
+
+    .weprovide-services h2
+        {
+            font-family: 'HelveticaNeueCyr';
+            font-weight: 100;
+            font-style: normal;
+            font-size: 0.9vw;
+            color: rgba(255, 255, 255, 0.3);
+            margin-top: 8%;
+        }
+
+    .weprovide-services div
+        {
+            width: 18.5%;
+            vertical-align: top;
+        }
+
+    .weprovide-service-midblock
+        {
+            margin: 0 6%;
+        }
+
+    .weprovide-button
+        {
+            text-align: center;
+            margin-top: 30vw;
+            margin-bottom: 5vw;
+        }
+
+    .weprovide-button a
+        {
+            text-decoration: none;
+            color: black;
+            background: white;
+            padding: 1.5vw 2.5vw;
+            font-family: 'HelveticaNeueCyr';
+            font-weight: 500;
+            font-size: 1vw;
+            transition: 0.3s;
+            vertical-align: middle;
+        }
+
+    .weprovide-button a:hover
+        {
+            color: white;
+            background: transparent;
+            border-style: solid;
+        }
+    .trigon-bottom
+        {
+            margin-top: 6%;
+            rotate: 180deg;
+            padding-bottom: 0.3%;
+        }
+    
+footer
+    {
+        background: white;
+        color: black;
+    }
+
+    .footer-header
+        {
+            padding-top: 5%;
+        }
+
+    .footer-header h1
+        {
+            font-family: 'HelveticaNeueCyr';
+            font-weight: 300;
+            font-size: 2.5vw;
+        }
+
+    .footer-header h2
+        {
+            font-family: 'Merriweather';
+            font-weight: 100;
+            color: rgba(0, 0, 0, 0.5);
+            font-size: 1.15vw;
+        }
+
+    .footer-addresses
+        {
+            margin-top: 4%;
+        }
+
+        .footer-addresses div
+            {
+                display: inline-block;
+                width: 17%;
+                vertical-align: top;
+            }
+
+        .footer-addresses h3
+            {
+                margin-top: 4%;
+                font-size: 1vw;
+                font-family: 'HelveticaNeueCyr';
+                font-weight: 100;
+                font-style: normal;
+                color: rgba(0, 0, 0, 0.6);
+            }
+    footer form
+            {
+                text-align: center;
+                margin-top: 10%;
+            }
+
+        footer input, footer textarea
+                {
+                    width: 45%;
+                }
+
+        footer textarea
+                {
+                    border-style: solid;
+                    overflow: auto;
+                    outline: none;
+                
+                    -webkit-box-shadow: none;
+                    -moz-box-shadow: none;
+                    box-shadow: none;
+                
+                    resize: none;
+                }
