--- a/css/styles.css
+++ b/css/styles.css
@@ -188,8 +188,12 @@ header h2
 
 .chronique
     {
+        display: flex;
         color: white;
         background-color: #1d1d1d;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        background: white;
     }
 
 .chronique h1
@@ -325,7 +329,7 @@ header h2
 
 .team
     {
-        margin-top: 76vw;
+        margin-top: 10vw;
     }
 
     .team-header
@@ -543,10 +547,6 @@ footer
         color: black;
     }
 
-    .footer-header
-        {
-            padding-top: 5%;
-        }
 
     .footer-header h1
         {
@@ -565,7 +565,7 @@ footer
 
     .footer-addresses
         {
-            margin-top: 4%;
+            margin-top: 7%;
         }
 
         .footer-addresses div
@@ -590,14 +590,16 @@ footer
                 margin-top: 10%;
             }
 
-        footer input, footer textarea
+        footer input, footer textarea, footer button
                 {
                     width: 45%;
+                    margin-top: 0.7%;
+                    text-align: center;
                 }
 
         footer textarea
                 {
-                    border-style: solid;
+                    text-align: left;
                     overflow: auto;
                     outline: none;
                 
@@ -606,4 +608,56 @@ footer
                     box-shadow: none;
                 
                     resize: none;
+                    font-size: 0.9vw;
+                    font-family: 'HelveticaNeueCyr';
+                    padding: 1.2% 1.2%;
+
+                    border-color: rgba(0, 0, 0, 0.3);
+                    border-style: solid;
+                    border-width: 2px;
+                    transition: 0.25s;
                 }
+
+            footer textarea:focus
+                {
+                    border-color: rgba(0, 0, 0, 0.6);
+                }
+
+        footer input
+            {
+                padding: 0.9% 0;
+                font-size: 0.9vw;
+                font-weight: 100;
+                border-color: rgba(0, 0, 0, 0.3);
+                border-style: solid;
+                border-width: 2px;
+                transition: 0.25s;
+            }
+
+        footer input:focus
+            {
+                border-color: rgba(0, 0, 0, 0.6);
+            }
+
+        .form-submit
+            {
+                padding: 1% 0;
+                border: none;
+                outline: none;
+                cursor: pointer;
+                background: #161616;
+                color: white;
+
+                font-size: 0.9vw;
+                font-weight: 200;
+                transition: 0.3s;
+            }
+
+        .form-submit:hover
+            {
+                color: rgb(0, 0, 0);
+                background: rgb(255, 255, 255);
+                border-style: ridge;
+                border-width: 2px;
+                border-color: #4b4b4b;
+            }
